fix about me spacing

--- a/index.css
+++ b/index.css
@@ -122,7 +122,7 @@ p {
 }
 
 #aboutme-text p {
-  width: 930px;
+  width: 850px;
   margin: 0 auto;
   font-size: 2em;
 }
